--- a/assets/style.css
+++ b/assets/style.css
@@ -2,3 +2,33 @@
     font-family: 'Roboto Condensed', sans-serif;
     font-family: 'Roboto Mono', monospace;
 }
+
+body {
+    height:100vh;
+    width: 100vw;
+    background-color: black;
+    margin: 0rem;
+    overflow: hidden;
+}
+
+.image {
+    width: 40vmin;
+    height: 56vmin;
+    object-fit: cover;
+    object-position: 100% 50%;
+}
+
+#imagetrack {
+    display:flex;
+    gap: 4vmin;
+    position: absolute;
+    left: 50%;
+    top:50%;
+    transform: translate(0%, -50%);
+}
+
+.B, .A {
+    position: relative;
+    bottom: 5px;
+    color: aliceblue;
+}
